[package]
name = "smart-pointer"
version = "0.1.0"
authors = ["Victor I. Afolabi <vafolabi@lotlinx.com>"]
edition = "2018"
description = "Low-level shareable mutable containers in Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/victor-iyi/smart-pointer"
repository = "https://github.com/victor-iyi/smart-pointer"
keywords = ["smart-pointers", "mutability", "shareable"]
categories = ["memory-management", "data-structures"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pointer"

[dependencies]
